--- a/java/Projects/mvc/src/main/resources/application.properties
+++ b/java/Projects/mvc/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.mvc.view.prefix=/WEB-INF/
 spring.datasource.url=jdbc:mysql://localhost:3306/books_schema
 spring.datasource.username=root
 spring.datasource.password=Rocco121496
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
