--- a/java/Projects/BurgerTracker/src/main/resources/application.properties
+++ b/java/Projects/BurgerTracker/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=Rocco121496
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.hiddenmethod.filter.enabled=true
