--- a/java/Projects/mvc/src/main/resources/application.properties
+++ b/java/Projects/mvc/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=Rocco121496
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.hiddenmethod.filter.enabled=true
